--- a/Mntone.SvgForXaml/Mntone.SvgForXaml.csproj
+++ b/Mntone.SvgForXaml/Mntone.SvgForXaml.csproj
@@ -36,72 +36,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <PlatformTarget>x86</PlatformTarget>
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <Optimize>true</Optimize>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
-    <PlatformTarget>ARM</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\ARM\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>ARM</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|ARM'">
-    <PlatformTarget>ARM</PlatformTarget>
-    <OutputPath>bin\ARM\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <Optimize>true</Optimize>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>ARM</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <PlatformTarget>x64</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
-    <Optimize>true</Optimize>
-    <NoWarn>;2008</NoWarn>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <ErrorReport>prompt</ErrorReport>
-  </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
@@ -112,13 +46,16 @@
     <Compile Include="Gradients\SvgRadialGradientElement.cs" />
     <Compile Include="Gradients\SvgSpreadMethodType.cs" />
     <Compile Include="Gradients\SvgStopElement.cs" />
-    <Compile Include="ICssValue.cs" />
-    <Compile Include="IElement.cs" />
-    <Compile Include="INode.cs" />
+    <Compile Include="Interfaces\ICssValue.cs" />
+    <Compile Include="Interfaces\IElement.cs" />
+    <Compile Include="Interfaces\INode.cs" />
+    <Compile Include="Interfaces\ISvgTransformable.cs" />
     <Compile Include="Internal\StringPtr.cs" />
     <Compile Include="Internal\SvgStylableHelper.cs" />
     <Compile Include="Internal\SvgHelper.cs" />
-    <Compile Include="ISvgStylable.cs" />
+    <Compile Include="Interfaces\ISvgStylable.cs" />
+    <Compile Include="Internal\SvgTransformableHelper.cs" />
+    <Compile Include="Maskings\SvgClipPathElement.cs" />
     <Compile Include="Path\SvgPathSegment.cs" />
     <Compile Include="Path\SvgPathSegmentArc.cs" />
     <Compile Include="Path\SvgPathSegmentClosePath.cs" />
@@ -137,7 +74,7 @@
     <Compile Include="Primitives\SvgMatrix.cs" />
     <Compile Include="Primitives\SvgTransform.cs" />
     <Compile Include="Primitives\SvgTransformCollection.cs" />
-    <Compile Include="Primitives\SvgTransformParser.cs" />
+    <Compile Include="Internal\SvgTransformParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Primitives\RgbColor.cs" />
     <Compile Include="Shapes\SvgCircleElement.cs" />
@@ -154,7 +91,7 @@
     <Compile Include="SvgImageRenderer.cs" />
     <Compile Include="SvgLengthConverter.cs" />
     <Compile Include="UI\Xaml\SvgImage.cs" />
-    <Compile Include="SvgPaint.cs" />
+    <Compile Include="Primitives\SvgPaint.cs" />
     <Compile Include="Path\SvgPathElement.cs" />
     <Compile Include="Primitives\SvgPoint.cs" />
     <Compile Include="Primitives\SvgPointCollection.cs" />
@@ -162,14 +99,15 @@
     <Compile Include="Shapes\SvgPolylineElement.cs" />
     <Compile Include="Primitives\SvgRect.cs" />
     <Compile Include="Shapes\SvgRectElement.cs" />
-    <Compile Include="SvgPaintType.cs" />
-    <Compile Include="SvgRendererBase.cs" />
+    <Compile Include="Primitives\SvgPaintType.cs" />
+    <Compile Include="Primitives\SvgRendererBase.cs" />
     <Compile Include="SvgSvgElement.cs" />
     <Compile Include="SvgSymbolElement.cs" />
     <Compile Include="SvgTitleElement.cs" />
     <Compile Include="Primitives\SvgUnitType.cs" />
     <Compile Include="SvgUseElement.cs" />
     <Compile Include="Win2dRenderer.cs" />
+    <Compile Include="TransformSession.cs" />
     <EmbeddedResource Include="Properties\Mntone.SvgForXaml.rd.xml" />
   </ItemGroup>
   <ItemGroup />
