Supports use element.

--- a/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
+++ b/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
@@ -355,6 +355,9 @@
     <Content Include="Assets\test1.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\test2.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\test4.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
