Polyline bug fix.

--- a/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
+++ b/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
@@ -358,6 +358,9 @@
     <Content Include="Assets\test2.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\test3.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Assets\test4.svg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
