Add Windows 8.1, Windows Phone 8.1 projects.

--- a/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
+++ b/Mntone.SvgForXaml.DemoApp/Mntone.SvgForXaml.DemoApp.csproj
@@ -486,9 +486,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Mntone.SvgForXaml\Mntone.SvgForXaml.csproj">
+    <ProjectReference Include="..\Mntone.SvgForXaml\Mntone.SvgForXaml.WindowsUniversal\Mntone.SvgForXaml.WindowsUniversal.csproj">
       <Project>{b1e3a656-f9ef-4491-92df-4e6ba970e3e4}</Project>
-      <Name>Mntone.SvgForXaml</Name>
+      <Name>Mntone.SvgForXaml.WindowsUniversal</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
