--- a/Mntone.SvgForXaml/Mntone.SvgForXaml.Windows/Mntone.SvgForXaml.Windows.csproj
+++ b/Mntone.SvgForXaml/Mntone.SvgForXaml.Windows/Mntone.SvgForXaml.Windows.csproj
@@ -94,6 +94,9 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="..\Mntone.SvgForXaml.Shared\Mntone.SvgForXaml.Shared.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
