--- a/Mntone.SvgForXaml/Mntone.SvgForXaml.nuspec
+++ b/Mntone.SvgForXaml/Mntone.SvgForXaml.nuspec
@@ -8,7 +8,7 @@
 		<owners>mntone</owners>
 		<description>Show svg image on xaml UI.</description>
 		<projectUrl>https://github.com/mntone/SvgForXaml</projectUrl>
-		<licenseUrl>https://github.com/mntone/SvgForXaml/blob/master/LICENSE.txt</licenseUrl>
+		<license type="file">license\LICENSE.txt</license>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<copyright>Copyright (C) 2015-2018 mntone</copyright>
 		<language>en-US</language>
@@ -26,6 +26,8 @@
 		</dependencies>
 	</metadata>
 	<files>
+		<file src="..\LICENSE.txt" target="license" />
+
 		<file src="Mntone.SvgForXaml.Windows\bin\x86\Release\Mntone.SvgForXaml.dll" target="lib\win81\x86" />
 		<file src="Mntone.SvgForXaml.Windows\bin\x86\Release\Mntone.SvgForXaml.pri" target="lib\win81\x86" />
 		<file src="Mntone.SvgForXaml.Windows\bin\x86\Release\Mntone.SvgForXaml.xr.xml" target="lib\win81\x86\Mntone.SvgForXaml" />
